force-app/main/default/objects/Session__c/fields/SessionID__c.field-meta.xml
<CustomField>
    <fullName>SessionID__c</fullName>
    <label>Session ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>