force-app/main/default/objects/Session__c/fields/ShortIntroduction__c.field-meta.xml
<CustomField>
    <fullName>ShortIntroduction__c</fullName>
    <label>Short Introduction</label>
    <type>TextArea</type>
</CustomField>