force-app/main/default/objects/Session__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>