force-app/main/default/objects/Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Speaker__c</columns>
    <columns>Event__c</columns>
    <columns>StartTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>ShortIntroduction__c</columns>
    <columns>SessionID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>